educationlaz: added frame for hiding menu items
git-svn-id: trunk@22240 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -699,6 +699,9 @@ components/education/educomppalette.pas svneol=native#text/plain
 components/education/eduenvoptsframe.lfm svneol=native#text/plain
 components/education/eduenvoptsframe.lrs svneol=native#text/plain
 components/education/eduenvoptsframe.pas svneol=native#text/plain
+components/education/edumenu.lfm svneol=native#text/plain
+components/education/edumenu.lrs svneol=native#text/plain
+components/education/edumenu.pas svneol=native#text/plain
 components/education/eduoptions.pas svneol=native#text/plain
 components/education/eduoptionsdlg.lfm svneol=native#text/plain
 components/education/eduoptionsdlg.lrs svneol=native#text/plain
