educationlaz: added page for new single file programs
git-svn-id: trunk@22253 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -702,6 +702,9 @@ components/education/eduenvoptsframe.pas svneol=native#text/plain
 components/education/edumenu.lfm svneol=native#text/plain
 components/education/edumenu.lrs svneol=native#text/plain
 components/education/edumenu.pas svneol=native#text/plain
+components/education/edunewprogram.lfm svneol=native#text/plain
+components/education/edunewprogram.lrs svneol=native#text/plain
+components/education/edunewprogram.pas svneol=native#text/plain
 components/education/eduoptions.pas svneol=native#text/plain
 components/education/eduoptionsdlg.lfm svneol=native#text/plain
 components/education/eduoptionsdlg.lrs svneol=native#text/plain
