dockmanager example: added View menu to the ElasticSite
git-svn-id: trunk@22442 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2768,15 +2768,15 @@ examples/dockmanager/easytree/fmain.pas svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/pascal
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
+examples/dockmanager/elasticsite/SiteTest.lpi svneol=native#text/plain
+examples/dockmanager/elasticsite/SiteTest.lpr svneol=native#text/plain
+examples/dockmanager/elasticsite/SiteTest.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.pas svneol=native#text/pascal
 examples/dockmanager/elasticsite/felastic.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/felastic.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/felastic.pas svneol=native#text/pascal
-examples/dockmanager/elasticsite/project1.lpi svneol=native#text/plain
-examples/dockmanager/elasticsite/project1.lpr svneol=native#text/plain
-examples/dockmanager/elasticsite/project1.lrs svneol=native#text/plain
 examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/pascal
 examples/dockmanager/package/easydocking.pas svneol=native#text/pascal
 examples/dockmanager/package/easydockmgr.lpk svneol=native#text/plain
@@ -2785,6 +2785,9 @@ examples/dockmanager/package/easydocksite.pas svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lfm svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lrs svneol=native#text/pascal
 examples/dockmanager/package/fdockbook.pas svneol=native#text/pascal
+examples/dockmanager/package/ffloatingsite.lfm svneol=native#text/plain
+examples/dockmanager/package/ffloatingsite.lrs svneol=native#text/plain
+examples/dockmanager/package/ffloatingsite.pas svneol=native#text/pascal
 examples/dockmanager/package/zoneheader.inc svneol=native#text/pascal
 examples/dockmanager/patches/FloatHostDockable.patch svneol=native#text/pascal
 examples/dockmanager/patches/NewClients.patch svneol=native#text/pascal
