--- a/.gitattributes
+++ b/.gitattributes
@@ -2774,6 +2774,9 @@ examples/dockmanager/elasticsite/SiteTest.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/fdockclient.pas svneol=native#text/pascal
+examples/dockmanager/elasticsite/feditorsite.lfm svneol=native#text/plain
+examples/dockmanager/elasticsite/feditorsite.lrs svneol=native#text/plain
+examples/dockmanager/elasticsite/feditorsite.pas svneol=native#text/pascal
 examples/dockmanager/elasticsite/felastic.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/felastic.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/felastic.pas svneol=native#text/pascal
