dockmanager example: added missing form
git-svn-id: trunk@22444 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2788,6 +2788,9 @@ examples/dockmanager/package/easydocksite.pas svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lfm svneol=native#text/plain
 examples/dockmanager/package/fdockbook.lrs svneol=native#text/pascal
 examples/dockmanager/package/fdockbook.pas svneol=native#text/pascal
+examples/dockmanager/package/felasticsite.lfm svneol=native#text/plain
+examples/dockmanager/package/felasticsite.lrs svneol=native#text/plain
+examples/dockmanager/package/felasticsite.pas svneol=native#text/pascal
 examples/dockmanager/package/ffloatingsite.lfm svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.lrs svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.pas svneol=native#text/pascal
