added lpl for easydockmgr
git-svn-id: trunk@22459 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5010,6 +5010,7 @@ packager/globallinks/codetools1-0.lpl svneol=native#text/plain
 packager/globallinks/dbflaz-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/demopackagewithhelp-0.lpl svneol=native#text/plain
 packager/globallinks/designbaseclassdemopkg-0.lpl svneol=native#text/plain
+packager/globallinks/easydockmgr-0.lpl svneol=native#text/plain
 packager/globallinks/editortoolbar-0.lpl svneol=native#text/plain
 packager/globallinks/exploreidemenu-0.lpl svneol=native#text/plain
 packager/globallinks/filefindlaz-0.lpl svneol=native#text/plain
