--- a/.gitattributes
+++ b/.gitattributes
@@ -2797,6 +2797,7 @@ examples/dockmanager/package/ffloatingsite.lfm svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.lrs svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.pas svneol=native#text/pascal
 examples/dockmanager/package/pen.ico -text
+examples/dockmanager/package/uminirestore.pas svneol=native#text/pascal
 examples/dockmanager/package/zoneheader.inc svneol=native#text/pascal
 examples/dockmanager/patches/FloatHostDockable.patch svneol=native#text/pascal
 examples/dockmanager/patches/NewClients.patch svneol=native#text/pascal
