dockmanager example: added missing files
git-svn-id: trunk@22585 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2771,6 +2771,9 @@ examples/dockmanager/easytree/fmain.pas svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lfm svneol=native#text/plain
 examples/dockmanager/easytree/ftree.lrs svneol=native#text/pascal
 examples/dockmanager/easytree/ftree.pas svneol=native#text/plain
+examples/dockmanager/elasticsite/MakeSite.lpi svneol=native#text/plain
+examples/dockmanager/elasticsite/MakeSite.lpr svneol=native#text/plain
+examples/dockmanager/elasticsite/MakeSite.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/SiteTest.lpi svneol=native#text/plain
 examples/dockmanager/elasticsite/SiteTest.lpr svneol=native#text/plain
 examples/dockmanager/elasticsite/SiteTest.lrs svneol=native#text/plain
@@ -2783,6 +2786,8 @@ examples/dockmanager/elasticsite/fdockclient.pas svneol=native#text/pascal
 examples/dockmanager/elasticsite/feditorsite.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/feditorsite.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/feditorsite.pas svneol=native#text/pascal
+examples/dockmanager/elasticsite/fmastersite.lfm svneol=native#text/plain
+examples/dockmanager/elasticsite/fmastersite.pas svneol=native#text/pascal
 examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/pascal
 examples/dockmanager/package/easydocking.pas svneol=native#text/pascal
 examples/dockmanager/package/easydockmgr.lpk svneol=native#text/plain
@@ -2798,6 +2803,7 @@ examples/dockmanager/package/ffloatingsite.lfm svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.lrs svneol=native#text/plain
 examples/dockmanager/package/ffloatingsite.pas svneol=native#text/pascal
 examples/dockmanager/package/pin.ico -text
+examples/dockmanager/package/umakesite.pas svneol=native#text/pascal
 examples/dockmanager/package/uminirestore.pas svneol=native#text/pascal
 examples/dockmanager/package/zoneheader.inc svneol=native#text/pascal
 examples/dockmanager/patches/FloatHostDockable.patch svneol=native#text/pascal
