* Synchronized Debian package building rules with official Debian.
git-svn-id: trunk@22658 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2207,6 +2207,7 @@ converter/delphiunit2laz.lrs svneol=native#text/pascal
 converter/delphiunit2laz.pas svneol=native#text/pascal
 converter/lazxmlforms.pas svneol=native#text/plain
 debian/README.Debian svneol=native#text/plain
+debian/README.source svneol=native#text/plain
 debian/changelog svneol=native#text/plain
 debian/compat svneol=native#text/plain
 debian/control svneol=native#text/plain
@@ -2225,6 +2226,7 @@ debian/overrides/lazarus-ide svneol=native#text/plain
 debian/overrides/lazarus-src svneol=native#text/plain
 debian/patches/01_topmakefile.diff svneol=native#text/plain
 debian/patches/02_components.diff svneol=native#text/plain
+debian/patches/default_config.diff svneol=native#text/plain
 debian/patches/series svneol=native#text/plain
 debian/rules svneol=native#text/plain
 debian/watch svneol=native#text/plain
