--- a/.gitattributes
+++ b/.gitattributes
@@ -4586,10 +4586,12 @@ lcl/interfaces/cocoa/cocoaint.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoaobject.inc svneol=native#text/plain
 lcl/interfaces/cocoa/cocoaprivate.pp svneol=native#text/plain
 lcl/interfaces/cocoa/cocoatrayicon.inc svneol=native#text/plain
+lcl/interfaces/cocoa/cocoautils.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawinapi.inc svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawinapih.inc svneol=native#text/plain
+lcl/interfaces/cocoa/cocoawscommon.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsextctrls.pas svneol=native#text/plain
-lcl/interfaces/cocoa/cocoawsfactory.pas svneol=native#text/pascal
+lcl/interfaces/cocoa/cocoawsfactory.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsforms.pp svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsmenus.pas svneol=native#text/plain
 lcl/interfaces/cocoa/cocoawsstdctrls.pp svneol=native#text/plain
