chmmaker: renamed project and main program file to chmmaker, to prevent naming conflict with chmwriter unit
git-svn-id: trunk@22753 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5198,11 +5198,11 @@ tools/apiwizz/apiwizard.pp svneol=native#text/pascal
 tools/apiwizz/apiwizz.lpi svneol=native#text/plain
 tools/apiwizz/apiwizz.pp svneol=native#text/pascal
 tools/check_ide_libs.sh -text svneol=native#application/x-sh
+tools/chmmaker/chmmaker.lpi svneol=native#text/plain
+tools/chmmaker/chmmaker.lpr svneol=native#text/plain
 tools/chmmaker/chmsitemapeditor.lfm svneol=native#text/plain
 tools/chmmaker/chmsitemapeditor.lrs svneol=native#text/pascal
 tools/chmmaker/chmsitemapeditor.pas svneol=native#text/plain
-tools/chmmaker/chmwriter.lpi svneol=native#text/plain
-tools/chmmaker/chmwriter.lpr svneol=native#text/plain
 tools/chmmaker/example/AboutLazarus.html svneol=native#text/plain
 tools/chmmaker/example/MainPage.html svneol=native#text/plain
 tools/chmmaker/example/SecondPage.html svneol=native#text/plain
