IDE: added codetools.lpk
git-svn-id: trunk@22883 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -415,7 +415,9 @@ components/codetools/codetemplatestool.pas svneol=native#text/pascal
 components/codetools/codetoolmanager.pas svneol=native#text/pascal
 components/codetools/codetoolmemmanager.pas svneol=native#text/pascal
 components/codetools/codetools.inc svneol=native#text/pascal
-components/codetools/codetools1.lpk svneol=native#text/plain
+components/codetools/codetools.lpk svneol=native#text/plain
+components/codetools/codetools.pas svneol=native#text/plain
+components/codetools/codetools1.pas svneol=native#text/plain
 components/codetools/codetoolsconfig.pas svneol=native#text/plain
 components/codetools/codetoolsstrconsts.pas svneol=native#text/pascal
 components/codetools/codetoolsstructs.pas svneol=native#text/pascal
@@ -5029,7 +5031,7 @@ packager/globallinks/aggpaslcl-1.lpl svneol=native#text/plain
 packager/globallinks/appforms-0.lpl svneol=native#text/plain
 packager/globallinks/cgilaz-0.lpl svneol=native#text/plain
 packager/globallinks/chmhelppkg-0.lpl svneol=native#text/plain
-packager/globallinks/codetools1-0.lpl svneol=native#text/plain
+packager/globallinks/codetools-0.lpl svneol=native#text/plain
 packager/globallinks/dbflaz-0.1.1.lpl svneol=native#text/plain
 packager/globallinks/demopackagewithhelp-0.lpl svneol=native#text/plain
 packager/globallinks/designbaseclassdemopkg-0.lpl svneol=native#text/plain
