demo: add xml reader demo from Aleksey Lagunov
git-svn-id: trunk@22889 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3156,6 +3156,15 @@ examples/widestringstreaming/mainunit.lrs svneol=native#text/pascal
 examples/widestringstreaming/mainunit.pas svneol=native#text/plain
 examples/widestringstreaming/widestringstreaming.lpi svneol=native#text/plain
 examples/widestringstreaming/widestringstreaming.lpr svneol=native#text/plain
+examples/xmlreader/TestXMLReder.ico -text svneol=unset#image/ico
+examples/xmlreader/TestXMLReder.lpi svneol=native#text/plain
+examples/xmlreader/TestXMLReder.lpr svneol=native#text/plain
+examples/xmlreader/TestXMLReder.lrs svneol=native#text/plain
+examples/xmlreader/TestXMLReder.manifest svneol=native#text/plain
+examples/xmlreader/TestXMLReder.rc svneol=native#text/plain
+examples/xmlreader/testxmlreaderunit.lfm svneol=native#text/plain
+examples/xmlreader/testxmlreaderunit.lrs svneol=native#text/plain
+examples/xmlreader/testxmlreaderunit.pas svneol=native#text/plain
 examples/xmlstreaming/mainunit.lfm svneol=native#text/plain
 examples/xmlstreaming/mainunit.lrs svneol=native#text/pascal
 examples/xmlstreaming/mainunit.pas svneol=native#text/plain
