--- a/.gitattributes
+++ b/.gitattributes
@@ -95,6 +95,9 @@ components/aggpas/lazarus/example/unit1.pas svneol=native#text/plain
 components/aggpas/lazarus/example/unit2.lfm svneol=native#text/plain
 components/aggpas/lazarus/example/unit2.lrs svneol=native#text/plain
 components/aggpas/lazarus/example/unit2.pas svneol=native#text/pascal
+components/aggpas/lazarus/example/unit3.lfm svneol=native#text/plain
+components/aggpas/lazarus/example/unit3.lrs svneol=native#text/plain
+components/aggpas/lazarus/example/unit3.pas svneol=native#text/pascal
 components/aggpas/line_patterns.dpr svneol=native#text/plain
 components/aggpas/lion.dpr svneol=native#text/plain
 components/aggpas/lion_lens.dpr svneol=native#text/plain
