jcf: register first options frame in the Lazarus IDE options
git-svn-id: trunk@23095 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1114,7 +1114,7 @@ components/jcf2/Ui/Settings/frComments.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frComments.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frCompilerDirectReturns.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frCompilerDirectReturns.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frFiles.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frFiles.lfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frFiles.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frIdentifierCapsSettings.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frIdentifierCapsSettings.pas svneol=native#text/pascal
