jcf: register obfuscate settings
git-svn-id: trunk@23108 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1115,12 +1115,14 @@ components/jcf2/Ui/Settings/frComments.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frCompilerDirectReturns.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frCompilerDirectReturns.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frFiles.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frFiles.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frFiles.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frIdentifierCapsSettings.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frIdentifierCapsSettings.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frObfuscateSettings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frObfuscateSettings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frObfuscateSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frObfuscateSettings.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frPreProcessor.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frPreProcessor.pas svneol=native#text/pascal
