jcf: register 'Clarify' and 'Spaces' options
git-svn-id: trunk@23110 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1094,7 +1094,8 @@ components/jcf2/Ui/Settings/frBasicSettings.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frBasicSettings.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frBlankLines.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frBlankLines.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarify.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarify.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarify.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarify.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyAlign.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frClarifyAlign.pas svneol=native#text/pascal
@@ -1108,7 +1109,8 @@ components/jcf2/Ui/Settings/frClarifyLongLineBreaker.dfm svneol=native#text/plai
 components/jcf2/Ui/Settings/frClarifyLongLineBreaker.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyReturns.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frClarifyReturns.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifySpaces.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifySpaces.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifySpaces.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifySpaces.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frComments.dfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frComments.pas svneol=native#text/pascal
