--- a/.gitattributes
+++ b/.gitattributes
@@ -2805,6 +2805,19 @@ examples/dockmanager/elasticsite/feditorsite.lrs svneol=native#text/plain
 examples/dockmanager/elasticsite/feditorsite.pas svneol=native#text/pascal
 examples/dockmanager/elasticsite/fmastersite.lfm svneol=native#text/plain
 examples/dockmanager/elasticsite/fmastersite.pas svneol=native#text/pascal
+examples/dockmanager/ide_demo/MiniIDE.ico -text
+examples/dockmanager/ide_demo/MiniIDE.lpi svneol=native#text/plain
+examples/dockmanager/ide_demo/MiniIDE.lpr svneol=native#text/plain
+examples/dockmanager/ide_demo/fclientform.lfm svneol=native#text/plain
+examples/dockmanager/ide_demo/fclientform.lrs svneol=native#text/plain
+examples/dockmanager/ide_demo/fclientform.pas svneol=native#text/plain
+examples/dockmanager/ide_demo/feditbook.lfm svneol=native#text/plain
+examples/dockmanager/ide_demo/feditbook.lrs svneol=native#text/plain
+examples/dockmanager/ide_demo/feditbook.pas svneol=native#text/plain
+examples/dockmanager/ide_demo/fminiide.lfm svneol=native#text/plain
+examples/dockmanager/ide_demo/fminiide.lrs svneol=native#text/plain
+examples/dockmanager/ide_demo/fminiide.pas svneol=native#text/plain
+examples/dockmanager/ide_demo/miniide.lrs svneol=native#text/plain
 examples/dockmanager/package/easy_dock_images.lrs svneol=native#text/pascal
 examples/dockmanager/package/easydocking.pas svneol=native#text/pascal
 examples/dockmanager/package/easydockmgr.lpk svneol=native#text/plain
