jcf: register all others options pages
git-svn-id: trunk@23117 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1086,68 +1086,82 @@ components/jcf2/Settings/SetWordList.pas svneol=native#text/pascal
 components/jcf2/Settings/SettingsTypes.pas svneol=native#text/pascal
 components/jcf2/Settings/Streams/RegistrySettings.pas svneol=native#text/pascal
 components/jcf2/Settings/Streams/SettingsStream.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frAnyCapsSettings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frAnyCapsSettings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frAnyCapsSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frAnyCapsSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frAsm.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frAsm.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frAsm.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frAsm.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frBasicSettings.dfm svneol=native#text/plain
-components/jcf2/Ui/Settings/frBasicSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frBlankLines.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frBlankLines.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frBlankLines.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frBlankLines.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarify.lfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frClarify.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarify.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyAlign.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyAlign.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyAlign.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyAlign.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyBlocks.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyBlocks.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyBlocks.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyBlocks.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyCaseBlocks.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyCaseBlocks.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyCaseBlocks.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyCaseBlocks.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyIndent.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyIndent.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyIndent.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyIndent.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyLongLineBreaker.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyLongLineBreaker.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyLongLineBreaker.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyLongLineBreaker.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frClarifyReturns.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyReturns.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frClarifyReturns.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifyReturns.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifySpaces.lfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frClarifySpaces.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frClarifySpaces.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frComments.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frComments.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frComments.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frComments.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frCompilerDirectReturns.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frCompilerDirectReturns.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frCompilerDirectReturns.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frCompilerDirectReturns.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frFiles.lfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frFiles.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frFiles.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frIdentifierCapsSettings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frIdentifierCapsSettings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frIdentifierCapsSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frIdentifierCapsSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frNotIdentifierCapsSettings.pas svneol=native#text/pascal
 components/jcf2/Ui/Settings/frObfuscateSettings.lfm svneol=native#text/plain
 components/jcf2/Ui/Settings/frObfuscateSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frObfuscateSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frPreProcessor.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frPreProcessor.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frPreProcessor.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frPreProcessor.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frReplace.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frReplace.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frReplace.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frReplace.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frReservedCapsSettings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frReservedCapsSettings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frReservedCapsSettings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frReservedCapsSettings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frTransform.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frTransform.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frTransform.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frTransform.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frUnitCaps.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frUnitCaps.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frUnitCaps.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frUnitCaps.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frUses.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frUses.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frUses.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frUses.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frWarnings.dfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frWarnings.lfm svneol=native#text/plain
+components/jcf2/Ui/Settings/frWarnings.lrs svneol=native#text/pascal
 components/jcf2/Ui/Settings/frWarnings.pas svneol=native#text/pascal
-components/jcf2/Ui/Settings/frmBaseSettingsFrame.dfm svneol=native#text/plain
-components/jcf2/Ui/Settings/frmBaseSettingsFrame.pas svneol=native#text/pascal
 components/jcf2/Ui/fAbout.dfm svneol=native#text/plain
 components/jcf2/Ui/fAbout.lfm svneol=native#text/plain
 components/jcf2/Ui/fAbout.lrs svneol=native#text/pascal
 components/jcf2/Ui/fAbout.pas svneol=native#text/pascal
-components/jcf2/Ui/fAllSettings.dfm svneol=native#text/plain
-components/jcf2/Ui/fAllSettings.pas svneol=native#text/pascal
 components/jcf2/Ui/fJcfErrorDisplay.dfm svneol=native#text/plain
 components/jcf2/Ui/fJcfErrorDisplay.lfm svneol=native#text/plain
 components/jcf2/Ui/fJcfErrorDisplay.lrs svneol=native#text/pascal
