ide: change lazbuild.rc and startlazarus.rc line endings from native to CRLF
git-svn-id: trunk@23157 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3511,7 +3511,7 @@ ide/lazarusidestrconsts.pas svneol=native#text/pascal
 ide/lazarusmanager.pas svneol=native#text/pascal
 ide/lazbuild.lpi svneol=native#text/plain
 ide/lazbuild.lpr svneol=native#text/plain
-ide/lazbuild.rc svneol=native#text/plain
+ide/lazbuild.rc svneol=CRLF#text/plain eol=crlf
 ide/lazconf.pp svneol=native#text/pascal
 ide/lazdoc.lrs svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
@@ -3600,7 +3600,7 @@ ide/splash.pp svneol=native#text/pascal
 ide/srcedithintfrm.pas svneol=native#text/plain
 ide/startlazarus.lpi svneol=native#text/plain
 ide/startlazarus.lpr svneol=native#text/pascal
-ide/startlazarus.rc svneol=native#text/plain
+ide/startlazarus.rc svneol=CRLF#text/plain eol=crlf
 ide/sysvaruseroverridedlg.lfm svneol=native#text/plain
 ide/sysvaruseroverridedlg.lrs svneol=native#text/pascal
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
