--- a/.gitattributes
+++ b/.gitattributes
@@ -2137,6 +2137,7 @@ components/tachart/fpdoc/talegend.xml svneol=native#text/plain
 components/tachart/fpdoc/taseries.xml svneol=native#text/plain
 components/tachart/fpdoc/tasources.xml svneol=native#text/plain
 components/tachart/fpdoc/tatypes.xml svneol=native#text/plain
+components/tachart/tachartaxis.pas svneol=native#text/pascal
 components/tachart/tachartlazaruspkg.lpk svneol=native#text/plain
 components/tachart/tachartlazaruspkg.pas svneol=native#text/plain
 components/tachart/tachartutils.pas svneol=native#text/plain
