--- a/.gitattributes
+++ b/.gitattributes
@@ -722,6 +722,8 @@ components/education/eduoptionsdlg.pas svneol=native#text/plain
 components/education/edupkgsystem.lfm svneol=native#text/plain
 components/education/edupkgsystem.lrs svneol=native#text/plain
 components/education/edupkgsystem.pas svneol=native#text/plain
+components/education/edupropsevents.lfm svneol=native#text/plain
+components/education/edupropsevents.pas svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lfm svneol=native#text/plain
 components/filebrowser/frmconfigfilebrowser.lrs svneol=native#text/pascal
 components/filebrowser/frmconfigfilebrowser.pp svneol=native#text/plain
