--- a/.gitignore
+++ b/.gitignore
@@ -238,6 +238,7 @@ examples/designerbaseclass/example/units
 examples/designerbaseclass/lib/*.bak
 examples/designerbaseclass/lib/units
 examples/designerbaseclass/units
+examples/dockmanager/Copy[!!-~]of[!!-~]easyedit
 examples/dropfiles/units[!!-~]*.bak
 examples/easter/*.bak
 examples/easter/units
