ide: project options: replace monolith project options dialog with project options frames, register them in IDE options
git-svn-id: trunk@23318 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3447,6 +3447,27 @@ ide/frames/naming_options.pas svneol=native#text/pascal
 ide/frames/oi_options.lfm svneol=native#text/plain
 ide/frames/oi_options.lrs svneol=native#text/pascal
 ide/frames/oi_options.pas svneol=native#text/pascal
+ide/frames/project_application_options.lfm svneol=native#text/plain
+ide/frames/project_application_options.lrs svneol=native#text/plain
+ide/frames/project_application_options.pas svneol=native#text/plain
+ide/frames/project_forms_options.lfm svneol=native#text/plain
+ide/frames/project_forms_options.lrs svneol=native#text/plain
+ide/frames/project_forms_options.pas svneol=native#text/plain
+ide/frames/project_i18n_options.lfm svneol=native#text/plain
+ide/frames/project_i18n_options.lrs svneol=native#text/plain
+ide/frames/project_i18n_options.pas svneol=native#text/plain
+ide/frames/project_lazdoc_options.lfm svneol=native#text/plain
+ide/frames/project_lazdoc_options.lrs svneol=native#text/plain
+ide/frames/project_lazdoc_options.pas svneol=native#text/plain
+ide/frames/project_misc_options.lfm svneol=native#text/plain
+ide/frames/project_misc_options.lrs svneol=native#text/plain
+ide/frames/project_misc_options.pas svneol=native#text/plain
+ide/frames/project_save_options.lfm svneol=native#text/plain
+ide/frames/project_save_options.lrs svneol=native#text/plain
+ide/frames/project_save_options.pas svneol=native#text/plain
+ide/frames/project_versioninfo_options.lfm svneol=native#text/plain
+ide/frames/project_versioninfo_options.lrs svneol=native#text/plain
+ide/frames/project_versioninfo_options.pas svneol=native#text/plain
 ide/frames/window_options.lfm svneol=native#text/plain
 ide/frames/window_options.lrs svneol=native#text/pascal
 ide/frames/window_options.pas svneol=native#text/pascal
@@ -3563,9 +3584,6 @@ ide/projecticon.pas svneol=native#text/pascal
 ide/projectinspector.lfm svneol=native#text/plain
 ide/projectinspector.lrs svneol=native#text/pascal
 ide/projectinspector.pas svneol=native#text/pascal
-ide/projectopts.lfm svneol=native#text/plain
-ide/projectopts.lrs svneol=native#text/pascal
-ide/projectopts.pp svneol=native#text/pascal
 ide/projectresources.pas svneol=native#text/pascal
 ide/projectwizarddlg.lfm svneol=native#text/plain
 ide/projectwizarddlg.lrs svneol=native#text/pascal
