ide: added compiler messages frame
git-svn-id: trunk@23320 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -3459,6 +3459,9 @@ ide/frames/project_i18n_options.pas svneol=native#text/plain
 ide/frames/project_lazdoc_options.lfm svneol=native#text/plain
 ide/frames/project_lazdoc_options.lrs svneol=native#text/plain
 ide/frames/project_lazdoc_options.pas svneol=native#text/plain
+ide/frames/project_messages_options.lfm svneol=native#text/plain
+ide/frames/project_messages_options.lrs svneol=native#text/plain
+ide/frames/project_messages_options.pas svneol=native#text/plain
 ide/frames/project_misc_options.lfm svneol=native#text/plain
 ide/frames/project_misc_options.lrs svneol=native#text/plain
 ide/frames/project_misc_options.pas svneol=native#text/plain
