--- a/.gitattributes
+++ b/.gitattributes
@@ -3399,6 +3399,9 @@ ide/frames/codetools_wordpolicy_options.pas svneol=native#text/pascal
 ide/frames/compiler_messages_options.lfm svneol=native#text/plain
 ide/frames/compiler_messages_options.lrs svneol=native#text/plain
 ide/frames/compiler_messages_options.pas svneol=native#text/plain
+ide/frames/compiler_path_options.lfm svneol=native#text/plain
+ide/frames/compiler_path_options.lrs svneol=native#text/plain
+ide/frames/compiler_path_options.pas svneol=native#text/plain
 ide/frames/desktop_options.lfm svneol=native#text/plain
 ide/frames/desktop_options.lrs svneol=native#text/pascal
 ide/frames/desktop_options.pas svneol=native#text/pascal
